tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_false_arrivallane/errors.duarouter
Error: Invalid arrivalLane definition for vehicle '1';
 must be one of ("current", or an int>=0)
Quitting (on error).
